compiler/src/sintactico/y.output
   0  $accept : programa $end

   1  programa : listaDefiniciones main

   2  main : "DEF" MAIN '(' ')' '{' listaDefsVars listaSentssOpt '}'

   3  listaDefiniciones : listaDefiniciones definicion
   4                    |

   5  definicion : defVariable
   6             | defFuncion

   7  defVariable : listaIdents AS tipo ';'

   8  listaIdents : listaIdents ',' "IDENT"
   9              | "IDENT"

  10  defFuncion : "DEF" "IDENT" '(' listaParametrosOpcional ')' tipoOpc '{' listaDefsVars listaSentssOpt '}'

  11  listaParametrosOpcional : listaParametros
  12                          |

  13  listaParametros : "IDENT" AS tipo
  14                  | listaParametros ',' "IDENT" AS tipo

  15  tipoOpc : AS tipo
  16          |

  17  listaDefsVars : listaDefsVars defVariable
  18                |

  19  listaSentssOpt : listaSents
  20                 |

  21  listaSents : listaSents sent
  22             | sent

  23  tipo : "INT"
  24       | "DOUBLE"
  25       | "CHAR"
  26       | tipo '[' CTE_ENTERA ']'
  27       | STRUCT '{' listaCampos '}'

  28  listaCampos : listaCampos campo
  29              | campo

  30  campo : listaIdents AS tipo ';'

  31  sent : asignacion
  32       | lectura
  33       | escritura
  34       | invProcedimiento
  35       | return
  36       | while
  37       | ifelse

  38  listaExpresiones : expresion
  39                   | listaExpresiones ',' expresion

  40  listaExpresionesOpcional : listaExpresiones
  41                           |

  42  asignacion : expresion '=' expresion ';'

  43  lectura : "INPUT" listaExpresiones ';'

  44  escritura : "PRINT" listaExpresiones ';'

  45  invProcedimiento : "IDENT" '(' listaExpresionesOpcional ')' ';'

  46  return : RETURN expresion ';'

  47  while : WHILE expresion '{' listaSents '}'

  48  ifelse : IF expresion '{' listaSents '}'
  49         | IF expresion '{' listaSents '}' ELSE '{' listaSents '}'

  50  expresion : expresion '+' expresion
  51            | expresion '-' expresion
  52            | expresion '*' expresion
  53            | expresion '/' expresion
  54            | expresion '%' expresion
  55            | expresion MAYORIGUAL expresion
  56            | expresion MENORIGUAL expresion
  57            | expresion '<' expresion
  58            | expresion '>' expresion
  59            | expresion DISTINTO expresion
  60            | expresion IGUALDAD expresion
  61            | expresion Y expresion
  62            | expresion O expresion
  63            | "IDENT"
  64            | CTE_ENTERA
  65            | CTE_REAL
  66            | CTE_CARACTER
  67            | '-' expresion
  68            | '!' expresion
  69            | '(' expresion ')'
  70            | '{' expresion '}'
  71            | expresion CAST tipo
  72            | expresion '[' expresion ']'
  73            | expresion '.' "IDENT"
  74            | "IDENT" '(' listaExpresionesOpcional ')'

state 0
	$accept : . programa $end  (0)
	listaDefiniciones : .  (4)

	.  reduce 4

	programa  goto 1
	listaDefiniciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : listaDefiniciones . main  (1)
	listaDefiniciones : listaDefiniciones . definicion  (3)

	"DEF"  shift 3
	"IDENT"  shift 4
	.  error

	main  goto 5
	definicion  goto 6
	defVariable  goto 7
	defFuncion  goto 8
	listaIdents  goto 9


state 3
	main : "DEF" . MAIN '(' ')' '{' listaDefsVars listaSentssOpt '}'  (2)
	defFuncion : "DEF" . "IDENT" '(' listaParametrosOpcional ')' tipoOpc '{' listaDefsVars listaSentssOpt '}'  (10)

	MAIN  shift 10
	"IDENT"  shift 11
	.  error


state 4
	listaIdents : "IDENT" .  (9)

	.  reduce 9


state 5
	programa : listaDefiniciones main .  (1)

	.  reduce 1


state 6
	listaDefiniciones : listaDefiniciones definicion .  (3)

	.  reduce 3


state 7
	definicion : defVariable .  (5)

	.  reduce 5


state 8
	definicion : defFuncion .  (6)

	.  reduce 6


state 9
	defVariable : listaIdents . AS tipo ';'  (7)
	listaIdents : listaIdents . ',' "IDENT"  (8)

	AS  shift 12
	','  shift 13
	.  error


state 10
	main : "DEF" MAIN . '(' ')' '{' listaDefsVars listaSentssOpt '}'  (2)

	'('  shift 14
	.  error


state 11
	defFuncion : "DEF" "IDENT" . '(' listaParametrosOpcional ')' tipoOpc '{' listaDefsVars listaSentssOpt '}'  (10)

	'('  shift 15
	.  error


state 12
	defVariable : listaIdents AS . tipo ';'  (7)

	STRUCT  shift 16
	"INT"  shift 17
	"DOUBLE"  shift 18
	"CHAR"  shift 19
	.  error

	tipo  goto 20


state 13
	listaIdents : listaIdents ',' . "IDENT"  (8)

	"IDENT"  shift 21
	.  error


state 14
	main : "DEF" MAIN '(' . ')' '{' listaDefsVars listaSentssOpt '}'  (2)

	')'  shift 22
	.  error


state 15
	defFuncion : "DEF" "IDENT" '(' . listaParametrosOpcional ')' tipoOpc '{' listaDefsVars listaSentssOpt '}'  (10)
	listaParametrosOpcional : .  (12)

	"IDENT"  shift 23
	')'  reduce 12

	listaParametrosOpcional  goto 24
	listaParametros  goto 25


state 16
	tipo : STRUCT . '{' listaCampos '}'  (27)

	'{'  shift 26
	.  error


state 17
	tipo : "INT" .  (23)

	.  reduce 23


state 18
	tipo : "DOUBLE" .  (24)

	.  reduce 24


state 19
	tipo : "CHAR" .  (25)

	.  reduce 25


state 20
	defVariable : listaIdents AS tipo . ';'  (7)
	tipo : tipo . '[' CTE_ENTERA ']'  (26)

	'['  shift 27
	';'  shift 28
	.  error


state 21
	listaIdents : listaIdents ',' "IDENT" .  (8)

	.  reduce 8


state 22
	main : "DEF" MAIN '(' ')' . '{' listaDefsVars listaSentssOpt '}'  (2)

	'{'  shift 29
	.  error


state 23
	listaParametros : "IDENT" . AS tipo  (13)

	AS  shift 30
	.  error


state 24
	defFuncion : "DEF" "IDENT" '(' listaParametrosOpcional . ')' tipoOpc '{' listaDefsVars listaSentssOpt '}'  (10)

	')'  shift 31
	.  error


state 25
	listaParametrosOpcional : listaParametros .  (11)
	listaParametros : listaParametros . ',' "IDENT" AS tipo  (14)

	','  shift 32
	')'  reduce 11


state 26
	tipo : STRUCT '{' . listaCampos '}'  (27)

	"IDENT"  shift 4
	.  error

	listaIdents  goto 33
	listaCampos  goto 34
	campo  goto 35


state 27
	tipo : tipo '[' . CTE_ENTERA ']'  (26)

	CTE_ENTERA  shift 36
	.  error


state 28
	defVariable : listaIdents AS tipo ';' .  (7)

	.  reduce 7


state 29
	main : "DEF" MAIN '(' ')' '{' . listaDefsVars listaSentssOpt '}'  (2)
	listaDefsVars : .  (18)

	.  reduce 18

	listaDefsVars  goto 37


state 30
	listaParametros : "IDENT" AS . tipo  (13)

	STRUCT  shift 16
	"INT"  shift 17
	"DOUBLE"  shift 18
	"CHAR"  shift 19
	.  error

	tipo  goto 38


state 31
	defFuncion : "DEF" "IDENT" '(' listaParametrosOpcional ')' . tipoOpc '{' listaDefsVars listaSentssOpt '}'  (10)
	tipoOpc : .  (16)

	AS  shift 39
	'{'  reduce 16

	tipoOpc  goto 40


state 32
	listaParametros : listaParametros ',' . "IDENT" AS tipo  (14)

	"IDENT"  shift 41
	.  error


state 33
	listaIdents : listaIdents . ',' "IDENT"  (8)
	campo : listaIdents . AS tipo ';'  (30)

	AS  shift 42
	','  shift 13
	.  error


state 34
	tipo : STRUCT '{' listaCampos . '}'  (27)
	listaCampos : listaCampos . campo  (28)

	'}'  shift 43
	"IDENT"  shift 4
	.  error

	listaIdents  goto 33
	campo  goto 44


state 35
	listaCampos : campo .  (29)

	.  reduce 29


state 36
	tipo : tipo '[' CTE_ENTERA . ']'  (26)

	']'  shift 45
	.  error


state 37
	main : "DEF" MAIN '(' ')' '{' listaDefsVars . listaSentssOpt '}'  (2)
	listaDefsVars : listaDefsVars . defVariable  (17)
	listaSentssOpt : .  (20)

	CTE_ENTERA  shift 46
	CTE_REAL  shift 47
	CTE_CARACTER  shift 48
	RETURN  shift 49
	WHILE  shift 50
	IF  shift 51
	'-'  shift 52
	'!'  shift 53
	'('  shift 54
	'{'  shift 55
	"IDENT"  shift 56
	"INPUT"  shift 57
	"PRINT"  shift 58
	'}'  reduce 20

	listaSentssOpt  goto 59
	defVariable  goto 60
	listaIdents  goto 9
	listaSents  goto 61
	sent  goto 62
	asignacion  goto 63
	lectura  goto 64
	escritura  goto 65
	invProcedimiento  goto 66
	return  goto 67
	while  goto 68
	ifelse  goto 69
	expresion  goto 70


state 38
	listaParametros : "IDENT" AS tipo .  (13)
	tipo : tipo . '[' CTE_ENTERA ']'  (26)

	'['  shift 27
	')'  reduce 13
	','  reduce 13


state 39
	tipoOpc : AS . tipo  (15)

	STRUCT  shift 16
	"INT"  shift 17
	"DOUBLE"  shift 18
	"CHAR"  shift 19
	.  error

	tipo  goto 71


state 40
	defFuncion : "DEF" "IDENT" '(' listaParametrosOpcional ')' tipoOpc . '{' listaDefsVars listaSentssOpt '}'  (10)

	'{'  shift 72
	.  error


state 41
	listaParametros : listaParametros ',' "IDENT" . AS tipo  (14)

	AS  shift 73
	.  error


state 42
	campo : listaIdents AS . tipo ';'  (30)

	STRUCT  shift 16
	"INT"  shift 17
	"DOUBLE"  shift 18
	"CHAR"  shift 19
	.  error

	tipo  goto 74


state 43
	tipo : STRUCT '{' listaCampos '}' .  (27)

	.  reduce 27


state 44
	listaCampos : listaCampos campo .  (28)

	.  reduce 28


state 45
	tipo : tipo '[' CTE_ENTERA ']' .  (26)

	.  reduce 26


state 46
	expresion : CTE_ENTERA .  (64)

	.  reduce 64


state 47
	expresion : CTE_REAL .  (65)

	.  reduce 65


state 48
	expresion : CTE_CARACTER .  (66)

	.  reduce 66


state 49
	return : RETURN . expresion ';'  (46)

	CTE_ENTERA  shift 46
	CTE_REAL  shift 47
	CTE_CARACTER  shift 48
	'-'  shift 52
	'!'  shift 53
	'('  shift 54
	'{'  shift 55
	"IDENT"  shift 75
	.  error

	expresion  goto 76


state 50
	while : WHILE . expresion '{' listaSents '}'  (47)

	CTE_ENTERA  shift 46
	CTE_REAL  shift 47
	CTE_CARACTER  shift 48
	'-'  shift 52
	'!'  shift 53
	'('  shift 54
	'{'  shift 55
	"IDENT"  shift 75
	.  error

	expresion  goto 77


state 51
	ifelse : IF . expresion '{' listaSents '}'  (48)
	ifelse : IF . expresion '{' listaSents '}' ELSE '{' listaSents '}'  (49)

	CTE_ENTERA  shift 46
	CTE_REAL  shift 47
	CTE_CARACTER  shift 48
	'-'  shift 52
	'!'  shift 53
	'('  shift 54
	'{'  shift 55
	"IDENT"  shift 75
	.  error

	expresion  goto 78


state 52
	expresion : '-' . expresion  (67)

	CTE_ENTERA  shift 46
	CTE_REAL  shift 47
	CTE_CARACTER  shift 48
	'-'  shift 52
	'!'  shift 53
	'('  shift 54
	'{'  shift 55
	"IDENT"  shift 75
	.  error

	expresion  goto 79


state 53
	expresion : '!' . expresion  (68)

	CTE_ENTERA  shift 46
	CTE_REAL  shift 47
	CTE_CARACTER  shift 48
	'-'  shift 52
	'!'  shift 53
	'('  shift 54
	'{'  shift 55
	"IDENT"  shift 75
	.  error

	expresion  goto 80


state 54
	expresion : '(' . expresion ')'  (69)

	CTE_ENTERA  shift 46
	CTE_REAL  shift 47
	CTE_CARACTER  shift 48
	'-'  shift 52
	'!'  shift 53
	'('  shift 54
	'{'  shift 55
	"IDENT"  shift 75
	.  error

	expresion  goto 81


state 55
	expresion : '{' . expresion '}'  (70)

	CTE_ENTERA  shift 46
	CTE_REAL  shift 47
	CTE_CARACTER  shift 48
	'-'  shift 52
	'!'  shift 53
	'('  shift 54
	'{'  shift 55
	"IDENT"  shift 75
	.  error

	expresion  goto 82


state 56
	listaIdents : "IDENT" .  (9)
	invProcedimiento : "IDENT" . '(' listaExpresionesOpcional ')' ';'  (45)
	expresion : "IDENT" .  (63)
	expresion : "IDENT" . '(' listaExpresionesOpcional ')'  (74)

	'('  shift 83
	Y  reduce 63
	O  reduce 63
	MAYORIGUAL  reduce 63
	MENORIGUAL  reduce 63
	DISTINTO  reduce 63
	IGUALDAD  reduce 63
	CAST  reduce 63
	AS  reduce 9
	'='  reduce 63
	'+'  reduce 63
	'-'  reduce 63
	'*'  reduce 63
	'/'  reduce 63
	'%'  reduce 63
	'>'  reduce 63
	'<'  reduce 63
	'['  reduce 63
	'.'  reduce 63
	','  reduce 9


state 57
	lectura : "INPUT" . listaExpresiones ';'  (43)

	CTE_ENTERA  shift 46
	CTE_REAL  shift 47
	CTE_CARACTER  shift 48
	'-'  shift 52
	'!'  shift 53
	'('  shift 54
	'{'  shift 55
	"IDENT"  shift 75
	.  error

	listaExpresiones  goto 84
	expresion  goto 85


state 58
	escritura : "PRINT" . listaExpresiones ';'  (44)

	CTE_ENTERA  shift 46
	CTE_REAL  shift 47
	CTE_CARACTER  shift 48
	'-'  shift 52
	'!'  shift 53
	'('  shift 54
	'{'  shift 55
	"IDENT"  shift 75
	.  error

	listaExpresiones  goto 86
	expresion  goto 85


state 59
	main : "DEF" MAIN '(' ')' '{' listaDefsVars listaSentssOpt . '}'  (2)

	'}'  shift 87
	.  error


state 60
	listaDefsVars : listaDefsVars defVariable .  (17)

	.  reduce 17


state 61
	listaSentssOpt : listaSents .  (19)
	listaSents : listaSents . sent  (21)

	CTE_ENTERA  shift 46
	CTE_REAL  shift 47
	CTE_CARACTER  shift 48
	RETURN  shift 49
	WHILE  shift 50
	IF  shift 51
	'-'  shift 52
	'!'  shift 53
	'('  shift 54
	'{'  shift 55
	"IDENT"  shift 88
	"INPUT"  shift 57
	"PRINT"  shift 58
	'}'  reduce 19

	sent  goto 89
	asignacion  goto 63
	lectura  goto 64
	escritura  goto 65
	invProcedimiento  goto 66
	return  goto 67
	while  goto 68
	ifelse  goto 69
	expresion  goto 70


state 62
	listaSents : sent .  (22)

	.  reduce 22


state 63
	sent : asignacion .  (31)

	.  reduce 31


state 64
	sent : lectura .  (32)

	.  reduce 32


state 65
	sent : escritura .  (33)

	.  reduce 33


state 66
	sent : invProcedimiento .  (34)

	.  reduce 34


state 67
	sent : return .  (35)

	.  reduce 35


state 68
	sent : while .  (36)

	.  reduce 36


state 69
	sent : ifelse .  (37)

	.  reduce 37


state 70
	asignacion : expresion . '=' expresion ';'  (42)
	expresion : expresion . '+' expresion  (50)
	expresion : expresion . '-' expresion  (51)
	expresion : expresion . '*' expresion  (52)
	expresion : expresion . '/' expresion  (53)
	expresion : expresion . '%' expresion  (54)
	expresion : expresion . MAYORIGUAL expresion  (55)
	expresion : expresion . MENORIGUAL expresion  (56)
	expresion : expresion . '<' expresion  (57)
	expresion : expresion . '>' expresion  (58)
	expresion : expresion . DISTINTO expresion  (59)
	expresion : expresion . IGUALDAD expresion  (60)
	expresion : expresion . Y expresion  (61)
	expresion : expresion . O expresion  (62)
	expresion : expresion . CAST tipo  (71)
	expresion : expresion . '[' expresion ']'  (72)
	expresion : expresion . '.' "IDENT"  (73)

	Y  shift 90
	O  shift 91
	MAYORIGUAL  shift 92
	MENORIGUAL  shift 93
	DISTINTO  shift 94
	IGUALDAD  shift 95
	CAST  shift 96
	'='  shift 97
	'+'  shift 98
	'-'  shift 99
	'*'  shift 100
	'/'  shift 101
	'%'  shift 102
	'>'  shift 103
	'<'  shift 104
	'['  shift 105
	'.'  shift 106
	.  error


state 71
	tipoOpc : AS tipo .  (15)
	tipo : tipo . '[' CTE_ENTERA ']'  (26)

	'['  shift 27
	'{'  reduce 15


state 72
	defFuncion : "DEF" "IDENT" '(' listaParametrosOpcional ')' tipoOpc '{' . listaDefsVars listaSentssOpt '}'  (10)
	listaDefsVars : .  (18)

	.  reduce 18

	listaDefsVars  goto 107


state 73
	listaParametros : listaParametros ',' "IDENT" AS . tipo  (14)

	STRUCT  shift 16
	"INT"  shift 17
	"DOUBLE"  shift 18
	"CHAR"  shift 19
	.  error

	tipo  goto 108


state 74
	tipo : tipo . '[' CTE_ENTERA ']'  (26)
	campo : listaIdents AS tipo . ';'  (30)

	'['  shift 27
	';'  shift 109
	.  error


state 75
	expresion : "IDENT" .  (63)
	expresion : "IDENT" . '(' listaExpresionesOpcional ')'  (74)

	'('  shift 110
	Y  reduce 63
	O  reduce 63
	MAYORIGUAL  reduce 63
	MENORIGUAL  reduce 63
	DISTINTO  reduce 63
	IGUALDAD  reduce 63
	CAST  reduce 63
	'='  reduce 63
	'+'  reduce 63
	'-'  reduce 63
	'*'  reduce 63
	'/'  reduce 63
	'%'  reduce 63
	'>'  reduce 63
	'<'  reduce 63
	'['  reduce 63
	']'  reduce 63
	'.'  reduce 63
	')'  reduce 63
	'{'  reduce 63
	'}'  reduce 63
	';'  reduce 63
	','  reduce 63


state 76
